--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta http-equiv="refresh" content="0; url=https://nthanhtin95.github.io/my-wedding-wesbite/wedding" />
+	<meta http-equiv="refresh" content="0; url=https://nthanhtin95.github.io/wed-website/wedding" />
 </head>
 </html>
