--- a/wedding.html
+++ b/wedding.html
@@ -40,7 +40,7 @@
 			
 			<section class="header header-1 fullscreen overlay">
 				<div class="background-image-holder">
-					<img alt="Background image" class="background-image" src="img/testbackgroundpic.jpg">
+					<img alt="Background image" class="background-image" src="img/thaobackground.jpg">
 				</div>
 			
 				<div class="container">
