--- a/index.html
+++ b/index.html
@@ -6,12 +6,25 @@
     <link rel="stylesheet" href="./static/style.css" />
     <link rel="stylesheet" href="./static/photoswipe.css" />
     <link rel="icon" type="image/png" href="./static/favicon.png" />
+    <style>
+      @font-face {
+        font-family: Maratre; 
+        src: format("opentype"), local("Maratre"),url('./static/custom_font/Maratre.otf');
+      } 
+      h2 {
+         font-family: JuneBug
+      }
+    </style>
   </head>
   <body>
     <div id="top"></div>
     <section id="front">
       <div class="curtain"></div>
       <div class="wrap center">
+        <h2>2023-06-25</h2>
+        <h2 style="font-family: 'Autumn in November'; font-style: normal;">Tin Nguyen</h2>
+        <h2 style="font-family: 'Autumn in November'; font-style: normal;">&</h2>
+        <h2 style="font-family: 'Autumn in November'; font-style: normal;">Thao Duong</h2>
       </div>
 
       <div class="overlay"></div>
@@ -355,12 +368,12 @@
 
     <a class="go-to go-to-top" href="#top">
       <img src="./static/top-icon.svg" />
-      위로
+      Top
     </a>
 
     <a class="share" href="#">
       <img src="./static/share-icon.svg" />
-      공유
+      Share
     </a>
 
     <script type="text/javascript" charset="UTF-8" src="./static/script.js"></script>
