--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
     <section id="front">
       <div class="curtain"></div>
       <div class="wrap center">
-        <h2>2023-06-25</h2>
-        <h2 style="font-family: 'Autumn in November'; font-style: normal;">Tin Nguyen</h2>
-        <h2 style="font-family: 'Autumn in November'; font-style: normal;">&</h2>
-        <h2 style="font-family: 'Autumn in November'; font-style: normal;">Thao Duong</h2>
+        <h2 style="font-family: 'Autumn in November'">Save the date</h2>
+        <h2 style="font-family: 'Distant Stroke'; font-weight:300;">Tin Nguyen</h2>
+        <h2 style="font-family: 'Distant Stroke'; font-weight:300;">&</h2>
+        <h2 style="font-family: 'Distant Stroke'; font-weight:300;">Thao Duong</h2>
       </div>
 
       <div class="overlay"></div>
