--- a/index.html
+++ b/index.html
@@ -6,22 +6,13 @@
     <link rel="stylesheet" href="./static/style.css" />
     <link rel="stylesheet" href="./static/photoswipe.css" />
     <link rel="icon" type="image/png" href="./static/favicon.png" />
-    <style>
-      @font-face {
-        font-family: Maratre; 
-        src: format("opentype"), local("Maratre"),url('./static/custom_font/Maratre.otf');
-      } 
-      h2 {
-         font-family: JuneBug
-      }
-    </style>
   </head>
   <body>
     <div id="top"></div>
     <section id="front">
       <div class="curtain"></div>
       <div class="wrap center">
-        <h2 style="font-family: 'Autumn in November'">Save the date</h2>
+        <h1 style="font-family: 'Autumn in November';">Save the date</h1>
         <h2 style="font-family: 'Distant Stroke'; font-weight:300;">Tin Nguyen</h2>
         <h2 style="font-family: 'Distant Stroke'; font-weight:300;">&</h2>
         <h2 style="font-family: 'Distant Stroke'; font-weight:300;">Thao Duong</h2>
