--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
       <div class="curtain"></div>
       <div class="wrap center">
         <h1 style="font-family: 'Autumn in November';">Save the date</h1>
-        <h2 style="font-family: 'Distant Stroke'; font-weight:300;">Tin Nguyen</h2>
-        <h2 style="font-family: 'Distant Stroke'; font-weight:300;">&</h2>
-        <h2 style="font-family: 'Distant Stroke'; font-weight:300;">Thao Duong</h2>
+        <h2 style="font-family: 'Distant Stroke'; font-weight:300;">Tin Nguyen & Thao Duong</h2>
       </div>
 
       <div class="overlay"></div>
