--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
       <div class="wrap center">
         <h1 style="font-family: 'Autumn in November';">Save the date</h1>
         <h2 style="font-family: 'Distant Stroke'; font-weight:300;">Tin Nguyen & Thao Duong</h2>
+        <div id="textbox">
+          <h3 class="date-time">| June 25 2023 | 9 am</h3>
+          <h3 class="location">Santa Ana California</h3>
+          <div style="clear: both;"></div>
+        </div>
       </div>
 
       <div class="overlay"></div>
