--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="wrap center">
         <h1 style="font-family: 'Autumn in November';">Save the date</h1>
         <h2 style="font-family: 'Distant Stroke'; font-weight:300;">Tin Nguyen & Thao Duong</h2>
-        <h3 class="date-time">| June 25 2023 | 9 am | Santa Ana, California</h3>
+        <h3 class="date-time">| June 25 2023 | 9 am - Santa Ana, California</h3>
       </div>
 
       <div class="overlay"></div>
