--- a/index.html
+++ b/index.html
@@ -35,19 +35,17 @@
 
     <section id="story-each">
       <div class="wrap clearfix">
-        <div class="content jaeyoung">
+        <div class="content tin">
           <h3>day</h3>
 
           <div class="photoset">
             <div class="photoset-row">
               <figure class="photoset-item">
-                <a href="./photos/1992-row1-1.png">
-                  <img src="./static/placeholder.png" data-ratio="0.6929" data-src="./photos/1992-row1-1.png" />
-                </a>
-              </figure>
-              <figure class="photoset-item">
-                <a href="./photos/1992-row1-2.png">
-                  <img src="./static/placeholder.png" data-ratio="1.115" data-src="./photos/1992-row1-2.png" />
+                <a href="./photos/tin-baby.jpg">
+                  <img 
+                    src="./static/placeholder.png" 
+                    data-ratio="1" 
+                    data-src="./photos/tin-baby.jpg"/>
                 </a>
               </figure>
             </div>
@@ -56,19 +54,14 @@
           <p>text</p>
         </div>
 
-        <div class="content soyoung">
+        <div class="content thao">
           <h3>day</h3>
 
           <div class="photoset">
             <div class="photoset-row">
               <figure class="photoset-item">
-                <a href="./photos/1994-row1-1.jpeg">
-                  <img src="./static/placeholder.png" data-ratio="0.75" data-src="./photos/1994-row1-1.jpeg" />
-                </a>
-              </figure>
-              <figure class="photoset-item">
-                <a href="./photos/1994-row1-2.png">
-                  <img src="./static/placeholder.png" data-ratio="1.0000" data-src="./photos/1994-row1-2.png" />
+                <a href="./photos/thao-baby.jpg">
+                  <img src="./static/placeholder.png" data-ratio="0.75" data-src="./photos/thao-baby.jpg" />
                 </a>
               </figure>
             </div>
@@ -77,24 +70,19 @@
           <p>text</p>
         </div>
 
-        <div class="content jaeyoung">
+        <div class="content tin">
           <h3>day</h3>
 
           <div class="photoset">
             <div class="photoset-row">
               <figure class="photoset-item">
-                <a href="./photos/1996-row1-1.jpg">
-                  <img src="./static/placeholder.png" data-ratio="1.0" data-src="./photos/1996-row1-1.jpg" />
+                <a href="./photos/together-la.jpg">
+                  <img src="./static/placeholder.png" data-ratio="1.0" data-src="./photos/together-la.jpg" />
                 </a>
               </figure>
               <figure class="photoset-item">
-                <a href="./photos/1996-row1-2.jpg">
-                  <img src="./static/placeholder.png" data-ratio="0.636" data-src="./photos/1996-row1-2.jpg" />
-                </a>
-              </figure>
-              <figure class="photoset-item">
-                <a href="./photos/1996-row1-3.jpg">
-                  <img src="./static/placeholder.png" data-ratio="0.75" data-src="./photos/1996-row1-3.jpg" />
+                <a href="./photos/together-restaurant.jpg">
+                  <img src="./static/placeholder.png" data-ratio="0.636" data-src="./photos/together-restaurant.jpg" />
                 </a>
               </figure>
             </div>
@@ -103,19 +91,18 @@
           <p>text</p>
         </div>
 
-        <div class="content soyoung">
+        <div class="content thao">
           <h3>day</h3>
-
           <div class="photoset">
             <div class="photoset-row">
               <figure class="photoset-item">
-                <a href="./photos/2002-row1-1.jpg">
-                  <img src="./static/placeholder.png" data-ratio="1.695" data-src="./photos/2002-row1-1.jpg" />
+                <a href="./photos/together-sf.jpg">
+                  <img src="./static/placeholder.png" data-ratio="0.9" data-src="./photos/together-sf.jpg" />
                 </a>
               </figure>
               <figure class="photoset-item">
-                <a href="./photos/2002-row1-2.png">
-                  <img src="./static/placeholder.png" data-ratio="0.6667" data-src="./photos/2002-row1-2.png" />
+                <a href="./photos/together-museum.jpg">
+                  <img src="./static/placeholder.png" data-ratio="0.75" data-src="./photos/together-museum.jpg" />
                 </a>
               </figure>
             </div>
@@ -124,7 +111,7 @@
           <p>text</p>
         </div>
 
-        <div class="content jaeyoung">
+        <div class="content tin">
           <h3>day</h3>
 
           <div class="photoset">
@@ -157,7 +144,7 @@
           <p>text</p>
         </div>
 
-        <div class="content soyoung">
+        <div class="content thao">
           <h3>day.</h3>
 
           <div class="photoset">
@@ -224,11 +211,11 @@
 
     <section id="playground-holder">
       <div id="playground">
-        <div id="jaeyoung-thumb" class="thumb jaeyoung">
+        <div id="tin-thumb" class="thumb tin">
           <span class="tf xsmall baby"></span>
         </div>
 
-        <div id="soyoung-thumb" class="thumb soyoung">
+        <div id="thao-thumb" class="thumb thao">
           <span class="tf xsmall baby"></span>
         </div>
       </div>
