--- a/index.html
+++ b/index.html
@@ -44,24 +44,27 @@
                 <a href="./photos/tin-baby.jpg">
                   <img 
                     src="./static/placeholder.png" 
-                    data-ratio="1" 
+                    data-ratio="0.8" 
                     data-src="./photos/tin-baby.jpg"/>
+                </a>
+              </figure>
+              <figure class="photoset-item">
+                <a href="./photos/thao-baby.jpg">
+                  <img src="./static/placeholder.png" data-ratio="0.75" data-src="./photos/thao-baby.jpg" />
                 </a>
               </figure>
             </div>
           </div>
-
           <p>text</p>
         </div>
 
         <div class="content thao">
           <h3>day</h3>
-
           <div class="photoset">
             <div class="photoset-row">
               <figure class="photoset-item">
-                <a href="./photos/thao-baby.jpg">
-                  <img src="./static/placeholder.png" data-ratio="0.75" data-src="./photos/thao-baby.jpg" />
+                <a href="./photos/firstdate.jpg">
+                  <img src="./static/placeholder.png" data-ratio="1" data-src="./photos/firstdate.jpg" />
                 </a>
               </figure>
             </div>
@@ -80,14 +83,8 @@
                   <img src="./static/placeholder.png" data-ratio="1.0" data-src="./photos/together-la.jpg" />
                 </a>
               </figure>
-              <figure class="photoset-item">
-                <a href="./photos/together-restaurant.jpg">
-                  <img src="./static/placeholder.png" data-ratio="0.636" data-src="./photos/together-restaurant.jpg" />
-                </a>
-              </figure>
             </div>
           </div>
-
           <p>text</p>
         </div>
 
@@ -96,13 +93,13 @@
           <div class="photoset">
             <div class="photoset-row">
               <figure class="photoset-item">
-                <a href="./photos/together-sf.jpg">
-                  <img src="./static/placeholder.png" data-ratio="0.9" data-src="./photos/together-sf.jpg" />
+                <a href="./photos/family-tin.jpg">
+                  <img src="./static/placeholder.png" data-ratio="0.7" data-src="./photos/family-tin.jpg" />
                 </a>
               </figure>
               <figure class="photoset-item">
-                <a href="./photos/together-museum.jpg">
-                  <img src="./static/placeholder.png" data-ratio="0.75" data-src="./photos/together-museum.jpg" />
+                <a href="./photos/family-thao.jpg">
+                  <img src="./static/placeholder.png" data-ratio="1.2" data-src="./photos/family-thao.jpg" />
                 </a>
               </figure>
             </div>
@@ -113,29 +110,11 @@
 
         <div class="content tin">
           <h3>day</h3>
-
           <div class="photoset">
             <div class="photoset-row">
               <figure class="photoset-item">
-                <a href="./photos/2011-row1.jpg">
-                  <img src="./static/placeholder.png" data-ratio="0.75" data-src="./photos/2011-row1.jpg" />
-                </a>
-              </figure>
-              <figure class="photoset-item">
-                <a href="./photos/2011-row2-1.jpg">
-                  <img src="./static/placeholder.png" data-ratio="1.3352" data-src="./photos/2011-row2-1.jpg" />
-                </a>
-              </figure>
-              <figure class="photoset-item">
-                <a href="./photos/2011-row2-2.png">
-                  <img src="./static/placeholder.png" data-ratio="2.0671" data-src="./photos/2011-row2-2.png" />
-                </a>
-              </figure>
-            </div>
-            <div class="photoset-row">
-              <figure class="photoset-item">
-                <a href="./photos/2011-row3.jpg">
-                  <img src="./static/placeholder.png" data-ratio="1.0" data-src="./photos/2011-row3.jpg" />
+                <a href="./photos/together-sf.jpg">
+                  <img src="./static/placeholder.png" data-ratio="0.9" data-src="./photos/together-sf.jpg" />
                 </a>
               </figure>
             </div>
@@ -146,38 +125,21 @@
 
         <div class="content thao">
           <h3>day.</h3>
-
           <div class="photoset">
             <div class="photoset-row">
               <figure class="photoset-item">
-                <a href="./photos/2013-row1-1.jpeg">
-                  <img src="./static/placeholder.png" data-ratio="1.3333" data-src="./photos/2013-row1-1.jpeg" />
+                <a href="./photos/thao-grad.jpg">
+                  <img src="./static/placeholder.png" data-ratio="0.75" data-src="./photos/thao-grad.jpg" />
                 </a>
               </figure>
               <figure class="photoset-item">
-                <a href="./photos/2013-row1-2.jpeg">
-                  <img src="./static/placeholder.png" data-ratio="0.7967" data-src="./photos/2013-row1-2.jpeg" />
+                <a href="./photos/tin-grad.jpg">
+                  <img src="./static/placeholder.png" data-ratio="1.2" data-src="./photos/tin-grad.jpg" />
                 </a>
               </figure>
             </div>
             <div class="photoset-row">
-              <figure class="photoset-item">
-                <a href="./photos/2013-row2.jpeg">
-                  <img src="./static/placeholder.png" data-ratio="1.0" data-src="./photos/2013-row2.jpeg" />
-                </a>
-              </figure>
-            </div>
-            <div class="photoset-row">
-              <figure class="photoset-item">
-                <a href="./photos/2013-row3-1.jpeg">
-                  <img src="./static/placeholder.png" data-ratio="0.5618" data-src="./photos/2013-row3-1.jpeg" />
-                </a>
-              </figure>
-              <figure class="photoset-item">
-                <a href="./photos/2013-row3-2.jpeg">
-                  <img src="./static/placeholder.png" data-ratio="1.3333" data-src="./photos/2013-row3-2.jpeg" />
-                </a>
-              </figure>
+              
             </div>
           </div>
 
@@ -192,13 +154,8 @@
           <div class="photoset">
             <div class="photoset-row">
               <figure class="photoset-item">
-                <a href="./photos/2017-row1-1.jpeg">
-                  <img src="./static/placeholder.png" data-ratio="0.75" data-src="./photos/2017-row1-1.jpeg" />
-                </a>
-              </figure>
-              <figure class="photoset-item">
-                <a href="./photos/2017-row1-2.jpeg">
-                  <img src="./static/placeholder.png" data-ratio="0.75" data-src="./photos/2017-row1-2.jpeg" />
+                <a href="./photos/propose.gif">
+                  <img src="./static/placeholder.png" data-ratio="0.55" data-src="./photos/propose.gif" />
                 </a>
               </figure>
             </div>
@@ -230,7 +187,7 @@
         <p>&nbsp;</p>
         <p>placeholder</p>
 
-        <div class="photoset">
+        <!-- <div class="photoset">
           <div class="photoset-row">
             <figure class="photoset-item">
                 <a href="./photos/wedding/3.jpg">
@@ -264,7 +221,7 @@
                 </a>
             </figure>
           </div>
-        </div>
+        </div> -->
       </section>
 
       <section id="welcome">
