--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <a href="./photos/tin-baby.jpg">
                   <img 
                     src="./static/placeholder.png" 
-                    data-ratio="0.8" 
+                    data-ratio="1" 
                     data-src="./photos/tin-baby.jpg"/>
                 </a>
               </figure>
@@ -94,12 +94,14 @@
             <div class="photoset-row">
               <figure class="photoset-item">
                 <a href="./photos/family-tin.jpg">
-                  <img src="./static/placeholder.png" data-ratio="0.7" data-src="./photos/family-tin.jpg" />
+                  <img src="./static/placeholder.png" data-ratio="1.3" data-src="./photos/family-tin.jpg" />
                 </a>
               </figure>
+            </div>
+            <div class="photoset-row">
               <figure class="photoset-item">
                 <a href="./photos/family-thao.jpg">
-                  <img src="./static/placeholder.png" data-ratio="1.2" data-src="./photos/family-thao.jpg" />
+                  <img src="./static/placeholder.png" data-ratio="1.3" data-src="./photos/family-thao.jpg" />
                 </a>
               </figure>
             </div>
