--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ function ShowAndHide() {
     <section id="story-each">
       <div class="wrap clearfix">
         <div class="content tin">
-          <h3>day</h3>
+          <h3>When we were little</h3>
 
           <div class="photoset">
             <div class="photoset-row">
@@ -71,11 +71,10 @@ function ShowAndHide() {
               </figure>
             </div>
           </div>
-          <p>text</p>
         </div>
 
         <div class="content thao">
-          <h3>day</h3>
+          <h3>2014 - Our first date</h3>
           <div class="photoset">
             <div class="photoset-row">
               <figure class="photoset-item">
@@ -85,13 +84,10 @@ function ShowAndHide() {
               </figure>
             </div>
           </div>
-
-          <p>text</p>
         </div>
 
         <div class="content tin">
-          <h3>day</h3>
-
+          <h3>2016 - 2 year anniversary</h3>
           <div class="photoset">
             <div class="photoset-row">
               <figure class="photoset-item">
@@ -101,11 +97,10 @@ function ShowAndHide() {
               </figure>
             </div>
           </div>
-          <p>text</p>
         </div>
 
         <div class="content thao">
-          <h3>day</h3>
+          <h3>Families meet for the first time</h3>
           <div class="photoset">
             <div class="photoset-row">
               <figure class="photoset-item">
@@ -122,12 +117,10 @@ function ShowAndHide() {
               </figure>
             </div>
           </div>
-
-          <p>text</p>
         </div>
 
         <div class="content tin">
-          <h3>day</h3>
+          <h3>SF 2019 - 5 year anniversary</h3>
           <div class="photoset">
             <div class="photoset-row">
               <figure class="photoset-item">
@@ -137,12 +130,10 @@ function ShowAndHide() {
               </figure>
             </div>
           </div>
-
-          <p>text</p>
         </div>
 
         <div class="content thao">
-          <h3>day.</h3>
+          <h3>Our graduations</h3>
           <div class="photoset">
             <div class="photoset-row">
               <figure class="photoset-item">
@@ -157,18 +148,14 @@ function ShowAndHide() {
               </figure>
             </div>
             <div class="photoset-row">
-              
             </div>
           </div>
-
-          <p>Text</p>
         </div>
       </div>
 
       <div class="wrap clearfix">
         <div class="content together">
-          <h3>Day</h3>
-
+          <h3>2021 - She said YES!!!</h3>
           <div class="photoset">
             <div class="photoset-row">
               <figure class="photoset-item">
@@ -178,8 +165,6 @@ function ShowAndHide() {
               </figure>
             </div>
           </div>
-
-          <p>Text</p>
         </div>
       </div>
     </section>
@@ -242,73 +227,15 @@ function ShowAndHide() {
       </section>
 
       <section id="welcome">
-        <h4>welcome</h4>
+        <h4>We can't wait to celebrate and create lasting memories with you all. Let's dance, laugh, and toast to a lifetime of love and happiness. 
+          Thank you for being a part of our lives.
+          With all our love,</h4>
         <p>&nbsp;</p>
 
-        <p>Text here</p>
+        <p>Tin & Thao</p>
         <p>&nbsp;</p>
 
       </section>
-  
-      <!-- <section id="location"> -->
-        <!-- <h4>Location</h4> -->
-        <!-- <img id="image-map" src="https://cdn.imweb.me/thumbnail/20210316/b39c3d9d68f79.png" /> -->
-  
-        <!-- <p><b>2022년 10월 1일 오후 1시</b></p>
-        <p><b>서초 더화이트베일 3층, V홀</b></p>
-        <p>&nbsp;</p>
-        <p><a href="tel:02-3474-5000" class="tel">02-3474-5000</a></p>
-        <p>&nbsp;</p>
-        <p>서울 서초동 1426-5번지</p>
-        <p><small>(서울 서초구 서초중앙로2길 10)</small></p>
-  
-        <ul>
-          <li>
-              <a href="http://naver.me/5gis9F2r" target="_blank">네이버 지도로 보기</a>
-          </li>
-          <li>
-            <a href="https://drive.google.com/file/d/1L0yR1CBHvNd7FSh9fjzmTQVfElAkkSJZ/view?usp=sharing" target="_blank">오시는 길 다운로드</a>
-          </li>
-        </ul>
-      </section> -->
-
-      <!-- <section id="congratulatory">
-        <h4>마음 전하는 곳</h4>
-
-        <table>
-          <tr>
-            <td><b>신랑측</b></td>
-            <td>
-              <span>하나은행 155-910386-87207 (이재영)</span>
-            </td>
-            <td>
-              <button class="copy-btn" data-clipboard-text="155-910386-87207">복사</button>
-            </td>
-          </tr>
-          <tr>
-            <td><b>신부측</b></td>
-            <td>
-              <span>국민은행 535502-04-098215 (조소영)</span>
-            </td>
-            <td>
-              <button class="copy-btn" data-clipboard-text="535502-04-098215">복사</button>
-            </td>
-          </tr>
-        </table>
-      </section> -->
-
-      <!-- <section id="thanks-to">
-        <p>
-          <span class="tf xsmall man-with-tuxido"></span>
-          <span class="tf xsmall woman-with-veil"></span>
-        </p>
-
-        <p>두 사람의 앞에 펼쳐질 <span class="rose">장밋빛 나날</span>들을</p>
-        <p>함께 축복해주신 모든 분께 감사를 전합니다.</p>
-        <p>앞으로 행복하게 잘 살겠습니다!</p>
-        <p>&nbsp;</p>
-
-      </section> -->
     </div>
 
     <a class="go-to go-to-top" href="#top">
