--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ function ShowAndHide() {
     <section id="story-each">
       <div class="wrap clearfix">
         <div class="content tin">
-          <h3>When we were little</h3>
+          <h3>When we were little...</h3>
 
           <div class="photoset">
             <div class="photoset-row">
@@ -74,7 +74,7 @@ function ShowAndHide() {
         </div>
 
         <div class="content thao">
-          <h3>2014 - Our first date</h3>
+          <h3>2014 - Our first date &#128150;</h3>
           <div class="photoset">
             <div class="photoset-row">
               <figure class="photoset-item">
@@ -87,7 +87,7 @@ function ShowAndHide() {
         </div>
 
         <div class="content tin">
-          <h3>2016 - 2 year anniversary</h3>
+          <h3>Santa Monica 2016 - 2 year anniversary</h3>
           <div class="photoset">
             <div class="photoset-row">
               <figure class="photoset-item">
@@ -100,7 +100,7 @@ function ShowAndHide() {
         </div>
 
         <div class="content thao">
-          <h3>Families meet for the first time</h3>
+          <h3>Meeting the parents</h3>
           <div class="photoset">
             <div class="photoset-row">
               <figure class="photoset-item">
