--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ function ShowAndHide() {
         </div>
 
         <div class="content thao">
-          <h3>Our graduations</h3>
+          <h3>Our graduations &#127891;</h3>
           <div class="photoset">
             <div class="photoset-row">
               <figure class="photoset-item">
@@ -155,7 +155,7 @@ function ShowAndHide() {
 
       <div class="wrap clearfix">
         <div class="content together">
-          <h3>2021 - She said YES!!!</h3>
+          <h3>2021 - She said YES! &#128141;</h3>
           <div class="photoset">
             <div class="photoset-row">
               <figure class="photoset-item">
