--- a/index.html
+++ b/index.html
@@ -59,9 +59,7 @@ function ShowAndHide() {
               <figure class="photoset-item">
                 <a href="./photos/tin-baby.jpg">
                   <img 
-                    src="./static/placeholder.png" 
-                    data-ratio="1" 
-                    data-src="./photos/tin-baby.jpg"/>
+                    src="./static/placeholder.png" data-ratio="1.33" data-src="./photos/tin-baby.jpg"/>
                 </a>
               </figure>
               <figure class="photoset-item">
@@ -105,14 +103,14 @@ function ShowAndHide() {
             <div class="photoset-row">
               <figure class="photoset-item">
                 <a href="./photos/family-tin.jpg">
-                  <img src="./static/placeholder.png" data-ratio="1.3" data-src="./photos/family-tin.jpg" />
+                  <img src="./static/placeholder.png" data-ratio="1.33" data-src="./photos/family-tin.jpg" />
                 </a>
               </figure>
             </div>
             <div class="photoset-row">
               <figure class="photoset-item">
                 <a href="./photos/family-thao.jpg">
-                  <img src="./static/placeholder.png" data-ratio="1.3" data-src="./photos/family-thao.jpg" />
+                  <img src="./static/placeholder.png" data-ratio="1.33" data-src="./photos/family-thao.jpg" />
                 </a>
               </figure>
             </div>
@@ -125,7 +123,7 @@ function ShowAndHide() {
             <div class="photoset-row">
               <figure class="photoset-item">
                 <a href="./photos/together-sf.jpg">
-                  <img src="./static/placeholder.png" data-ratio="0.9" data-src="./photos/together-sf.jpg" />
+                  <img src="./static/placeholder.png" data-ratio="0.95" data-src="./photos/together-sf.jpg" />
                 </a>
               </figure>
             </div>
@@ -138,12 +136,12 @@ function ShowAndHide() {
             <div class="photoset-row">
               <figure class="photoset-item">
                 <a href="./photos/thao-grad.jpg">
-                  <img src="./static/placeholder.png" data-ratio="0.75" data-src="./photos/thao-grad.jpg" />
+                  <img src="./static/placeholder.png" data-ratio="0.67" data-src="./photos/thao-grad.jpg" />
                 </a>
               </figure>
               <figure class="photoset-item">
                 <a href="./photos/tin-grad.jpg">
-                  <img src="./static/placeholder.png" data-ratio="1.2" data-src="./photos/tin-grad.jpg" />
+                  <img src="./static/placeholder.png" data-ratio="1.5" data-src="./photos/tin-grad.jpg" />
                 </a>
               </figure>
             </div>
